fix cards alignment

--- a/css/styles.css
+++ b/css/styles.css
@@ -150,8 +150,7 @@ body {
   flex-wrap: wrap;
   margin: auto;
   width: 100%;
-  max-width: 900px;
-  justify-content: flex-start;
+  max-width: 700px;
 }
 
 .card {
